<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarPerfil">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/verdedev"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@android:drawable/ic_menu_revert"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Tutor"
        android:layout_width="105dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:background="@color/verdedev"
        android:text="@string/tutor"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/estudante"
        android:layout_width="105dp"
        android:layout_height="32dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="16dp"
        android:background="@color/verdedev"
        android:text="@string/estudante"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="102dp"
        android:layout_height="106dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="484dp"
        android:contentDescription="@string/todo5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        tools:srcCompat="@drawable/ic_person" />

    <TextView
        android:id="@+id/CriarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="156dp"
        android:text="@string/criar_perfil"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/digite_seu_nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextcpf"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/digite_seu_cpf"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/data_de_nascimento"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextqualificacao"
        android:layout_width="339dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/interesse"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextcpf"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="339dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextqualificacao"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSalvar"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="144dp"
        android:background="@color/verdedev"
        android:text="@string/salvar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>