<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro"
    android:layout_gravity="center"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/verdedev"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@android:drawable/ic_menu_revert"/>


    <TextView
        android:id="@+id/vm_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="40dp"
        android:text="@string/vamos_come_ar"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btGoogle"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="49dp"
        android:background="@color/verdedev"
        android:text="@string/continuar_com_o_goggle"
        android:textColor="@color/white"
        app:layout_constraintCircleRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Entrar"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Entrar"
        android:layout_width="314dp"
        android:layout_height="45dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="49dp"
        android:background="@color/verdedev"
        android:text="@string/criar_conta"

        android:textColor="@color/white"
        app:layout_constraintCircleRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ds_senha"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/ds_email"
        android:layout_width="304dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="54dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/digite_seu_email"
        android:inputType="textWebEmailAddress"
        android:textColor="@color/verdedev"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/ds_senha"
        android:layout_width="304dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="54dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/digite_sua_senha"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ds_email" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="271dp"
        android:layout_height="250dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:srcCompat="@drawable/personagem" />





</androidx.constraintlayout.widget.ConstraintLayout>