<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d3vs"
        android:textColor="#11DD62"
        android:textSize="65sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imagehome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:background="#8F11DD62"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:srcCompat="@drawable/dev" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btregistrar"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="26dp"
        android:background="@color/verdedev"
        android:text="@string/registrar2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btEntrar"
        app:layout_constraintCircleRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagehome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEntrar"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="67dp"
        android:background="@color/verdedev"
        android:text="@string/entrar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btregistrar" />

</androidx.constraintlayout.widget.ConstraintLayout>