<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.hometutorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nmUsuario"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginStart="102dp"
            android:layout_marginTop="304dp"
            android:layout_marginEnd="100dp"
            android:text="@string/nome_do_usuario"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/linguagem1"
            android:layout_width="73dp"
            android:layout_height="19dp"
            android:layout_marginTop="28dp"
            android:text="Linguagem 1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/linguagem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="41dp"
            android:text="Linguagem 2"
            app:layout_constraintEnd_toStartOf="@+id/linguagem1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/linguagem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="56dp"
            android:text="Linguagem 3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linguagem1"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="254dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/todo6"
            android:src="@drawable/avattutor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailIusario"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="35dp"
            android:text="@string/email_do_usuario"
            app:layout_constraintEnd_toStartOf="@+id/IdadeUs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nmUsuario" />

        <TextView
            android:id="@+id/IdadeUs"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="56dp"
            android:text="@string/idade_do_usuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/emailIusario"
            app:layout_constraintTop_toBottomOf="@+id/nmUsuario" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="9dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IdadeUs" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edtperfil"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="119dp"
            android:layout_marginTop="63dp"
            android:layout_marginEnd="119dp"
            android:background="@color/verdedev"
            android:text="@string/editar_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linguagem2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>